--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "fetchJSON.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
